# web_rosbag_manager

./: CHANGELOG.rst  CMakeLists.txt  NOTICE  README.md  README_en.md  THIRD-PARTY-NOTICES.md  install.sh  package.xml  uninstall.sh
launch/: web_rosbag_manager.launch
scripts/: rosbag_manager.py  web_rosbag_manager.py
scripts/static/: main.js  style.css
scripts/templates/: index.html
